[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Kenny Pixel Shmup/Tiles/tile_0029.png" type="Texture" id=1]
[ext_resource path="res://Assets/Kenny Pixel Shmup/Tiles/tile_0030.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Mortar.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Mortar" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="Head" type="Node2D" parent="."]

[node name="Head" type="Sprite" parent="Head"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 6.0
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_GunCooldown_timeout"]
